# ShadowQR

./: .gitignore  README.md  docker-compose.yml  implementation_plan.md  requirements_v1.3.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  pipeline.py
backend/app/api/: convert.py  progress.py  result.py
backend/app/core/: homography.py  meshing.py  qr.py  raycast.py  verify.py  voxelize.py  wall_uv.py
backend/app/jobs/: store.py
backend/app/models/: schemas.py
backend/tests/fixtures/: create_test_stl.py
backend/tests/integration/: conftest.py  test_api.py
backend/tests/unit/: test_homography.py  test_meshing.py  test_qr.py  test_raycast.py  test_verify.py  test_voxelize.py  test_wall_uv.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ParamPanel.tsx  ProgressBar.tsx  QRTextInput.tsx  UploadZone.tsx  VerifyResult.tsx
frontend/src/store/: jobStore.ts  paramStore.ts  stlStore.ts
frontend/src/viewers/: InputStlViewer.tsx  OutputStlViewer.tsx  ShadowSimulator.tsx
frontend/tests/: setup.ts
frontend/tests/components/: ParamPanel.test.tsx  ProgressBar.test.tsx  QRTextInput.test.tsx  UploadZone.test.tsx  VerifyResult.test.tsx
frontend/tests/stores/: jobStore.test.ts  paramStore.test.ts  stlStore.test.ts
tests/e2e/: helpers.ts  package-lock.json  package.json  playwright.config.ts  shadowqr.spec.ts
