[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shadowqr-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "numpy-stl>=3.1.1",
    "trimesh>=4.3.0",
    "qrcode[pil]>=7.4.2",
    "opencv-python-headless>=4.9.0.80",
    "scikit-image>=0.23.0",
    "pyzbar>=0.1.9",
    "numba>=0.59.0",
    "websockets>=12.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.hatch.build.targets.wheel]
packages = ["app"]
